--- a/client/styles.css
+++ b/client/styles.css
@@ -1,31 +1,32 @@
+
 body {
   font-family: 'Quicksand', sans-serif;
-  background: linear-gradient(120deg, #003e92, #3ecf00);
+  background: linear-gradient(90deg, #003e92, #3ecf00);
   color: white;
   text-align: center;
   margin: 0;
   padding: 0;
 }
-.login-container {
-  max-width: 400px;
-  margin: 3rem auto;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 2rem;
-  border-radius: 10px;
+.container {
+  margin-top: 3rem;
 }
 input {
   display: block;
   width: 80%;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
   padding: 0.5rem;
-  border: none;
   border-radius: 5px;
+  border: none;
 }
 button {
   background-color: #3ecf00;
   color: white;
-  padding: 0.5rem 1rem;
   border: none;
+  padding: 0.5rem 1rem;
   border-radius: 20px;
   cursor: pointer;
+  margin-bottom: 1rem;
+}
+.form-block {
+  margin: 2rem auto;
 }
